Slightly update tests.